# server

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  api.yaml  astro.config.mjs  components.json  config.default.yaml  config.example.yaml  config.linux.yaml  config.schema.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
examples/: server_icon.txt
integrations/: i18n.ts
k6/: chunked-upload.js
migrations/2025-08-29-193535_create_file_uploads/: up.sql
migrations/2025-11-16-145142_add_chunked_column_to_file_uploads/: down.sql  up.sql
migrations/2026-02-10-182648_add_expires_in_field/: down.sql  up.sql
package/: mikupush-server.service  postinst.sh  postrm.sh  prerm.sh
scripts/: apply-version.sh  deb-package.sh  license.py  license.ts  tar-package.sh  third-party-licences.ts
src/: cache.rs  clock.rs  database.rs  errors.rs  jobs.rs  logging.rs  main.rs  model.rs  routes.rs  schema.rs  serialization.rs  services.rs  template.rs  tracing.rs
src/config/: database.rs  env.rs  logging.rs  mod.rs  server.rs  settings.rs  upload.rs  yaml.rs
src/domain/: file_upload.rs
src/errors/: file_delete_error.rs  file_info_error.rs  file_read_error.rs  file_upload_error.rs  mod.rs  route_error.rs
src/file/: delete.rs  info.rs  mod.rs  (+6 more)
templates/: health_error.html  health_ok.html
web/: health-error.html  health-ok.html  index.html  mime-type.ts  models.ts  theme.ts
(+84 files in other folders)
