[package]
name = "mikupush-server"
version = "0.0.6"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures = "0.3"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
pq-sys = { version = "0.7.2", features = ["bundled"] }
diesel_migrations = "2.2.0"
r2d2 = "0.8.10"
dirs = "6.0.0"
log = "0.4.27"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
serial_test = "3.2.0"
actix-files = "0.6.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
tokio-util = "0.7.17"
actix-http = "3.11.2"
bytes = "1.10.1"
tokio-stream = "0.1.17"
